Add sidebar rendering functionality for sensor data
- Implemented createElementA function to streamline element creation.
- Developed renderSidebar function to dynamically generate a sidebar based on sensor data.
- Each sensor is displayed with its name, metadata, and parameters.
- Enhanced parameter display with formatted values and units.

--- a/src/WebUI/index.html
+++ b/src/WebUI/index.html
@@ -10,22 +10,10 @@
    <body>
       <aside class="sidebar">
          <div id="sensor-sidebar" aria-live="polite"></div>
-
-         <div
-            class="chart-section"
-            style="
-               margin-top: 20px;
-               padding-top: 20px;
-               border-top: 1px solid rgba(255, 255, 255, 0.05);
-            "
-         >
-            <div style="height: 180px">
-               <canvas id="sensor-chart"></canvas>
-            </div>
-         </div>
       </aside>
 
-      <script src="chart.js"></script>
+      <script src="elementslib.js"></script>
+
       <script src="app.js"></script>
    </body>
 </html>
